--- a/client/app/common/nvd3.less
+++ b/client/app/common/nvd3.less
@@ -67,6 +67,12 @@ svg.nvd3-svg {
   user-select: none;
 }
 
+.nvtooltip h3 {
+  font-size: 13px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
 /*Give tooltips that old fade in transition by
     putting a "with-transitions" class on the container div.
 */
