--- a/client/app/common/nvd3.less
+++ b/client/app/common/nvd3.less
@@ -52,6 +52,9 @@ svg.nvd3-svg {
   padding: 1px;
   border: 1px solid rgba(0,0,0,.2);
   z-index: 10000;
+  border-radius: 4px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+
 
   font-size: 13px;
   text-align: left;
@@ -68,9 +71,25 @@ svg.nvd3-svg {
 }
 
 .nvtooltip h3 {
-  font-size: 13px;
-  font-weight: 500;
-  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+
+}
+
+.nvtooltip .tooltip-cont {
+  padding: 10px;
+  text-align: left;
+  min-width: 150px;
+  h3 {
+    text-align: left;
+  }
+  strong {
+    font-size: 13px;
+  }
+}
+
+.nv-x .tick text {
+  font-size: 8px;
 }
 
 /*Give tooltips that old fade in transition by
@@ -108,8 +127,6 @@ svg.nvd3-svg {
 
 .nvtooltip p {
   margin: 0;
-  padding: 5px 14px;
-  text-align: center;
 }
 
 .nvtooltip span {
